--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.20'
 }
 
 android {
@@ -63,6 +64,9 @@ dependencies {
 
     debugImplementation 'androidx.compose.ui:ui-tooling'
     // END
+
+    // KotlinX Serialization to easily parse JSON to Data Class and vice-versa
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
 
     testImplementation 'junit:junit:4.13.2'
 
